set the roadline

--- a/index.html
+++ b/index.html
@@ -381,6 +381,8 @@
     <section class="roadBorder">
         <div class="container1140">
             <div class="timeline pt-100 ">
+                <!-- position image -->
+                <img src="./assets/img/svg/roadLine1.svg" class="position-absolute roadline" alt="line">
                 <div class="roadBox position-relative right">
                     <h4 class="fw_400 fs-14 ff-Noto lh-19 black  mb-0">
                         Phase 1
