change preloader code

--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body>
-
+<body class="overflow_hidden">
+    <!-- loadder -->
+    <div class="loading-overlay" id="loadingOverlay">
+        <div class="loader d-flex justify-content-center align-items-center ">
+            <h3 class="fw-400 fs-24 pointer lh-28 ff-Moderno black mb-0">Hustlin' Hardos</h3>
+        </div>
+    </div>
     <header>
         <nav>
             <marquee width="100%" direction="left" height="54px" class="bg-black ">
