--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- loadder -->
     <div class="loading-overlay" id="loadingOverlay">
         <div class="loader d-flex justify-content-center align-items-center ">
-            <h3 class="fw-400 fs-24 pointer lh-28 ff-Moderno black mb-0">Hustlin' Hardos</h3>
+            <h3 class="fw-300 fs-36 pointer lh-28 ff-Moderno white mb-0">Hustlin' Hardos</h3>
         </div>
     </div>
     <header>
